Implement RPC custom serialization for Collections.singletonList()
Review at http://gwt-code-reviews.appspot.com/357801

Review by: jat@google.com

git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@7946 8db76d5a-ed1c-0410-87a9-c151d255dfc7